--- a/English.lproj/MainMenu.xib
+++ b/English.lproj/MainMenu.xib
@@ -8,14 +8,14 @@
 		<string key="IBDocument.HIToolboxVersion">353.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="371"/>
-			<integer value="514"/>
 			<integer value="29"/>
+			<integer value="514"/>
+			<integer value="371"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<string>com.apple.imagekit.ibplugin</string>
 			<string>com.apple.InterfaceBuilderKit</string>
+			<string>com.apple.imagekit.ibplugin</string>
 			<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 		</object>
 		<object class="NSMutableArray" key="IBDocument.RootObjects" id="1048">
@@ -764,7 +764,6 @@
 							<string>5CFFB268-C1F1-4425-A2CF-9BFD51B28500</string>
 							<string>87C2E0F5-4568-4BAD-9BBC-D113E70184D4</string>
 							<string>BA6BB2EB-8297-41E4-A439-9D552DA99063</string>
-							<string>D104460A-091E-4E6B-968D-E93C0B5CAF4A</string>
 							<string>E63AEC6E-AA75-4754-B068-DE225F738B15</string>
 							<string>NSToolbarCustomizeToolbarItem</string>
 							<string>NSToolbarFlexibleSpaceItem</string>
@@ -843,13 +842,13 @@
 								<object class="NSMutableString" key="NSToolbarItemIdentifier">
 									<characters key="NS.bytes">430A0946-FEE6-4C62-A991-A27919D54FC3</characters>
 								</object>
-								<string key="NSToolbarItemLabel">Auto Split All</string>
-								<string key="NSToolbarItemPaletteLabel">Auto Split All</string>
+								<string key="NSToolbarItemLabel">Auto Group</string>
+								<string key="NSToolbarItemPaletteLabel">Auto Group</string>
 								<string key="NSToolbarItemToolTip"/>
 								<nil key="NSToolbarItemView"/>
 								<object class="NSCustomResource" key="NSToolbarItemImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">NSRefreshFreestandingTemplate</string>
+									<string key="NSResourceName">NSActionTemplate</string>
 								</object>
 								<nil key="NSToolbarItemTarget"/>
 								<nil key="NSToolbarItemAction"/>
@@ -938,28 +937,6 @@
 								<object class="NSCustomResource" key="NSToolbarItemImage">
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">NSGoRightTemplate</string>
-								</object>
-								<nil key="NSToolbarItemTarget"/>
-								<nil key="NSToolbarItemAction"/>
-								<string key="NSToolbarItemMinSize">{0, 0}</string>
-								<string key="NSToolbarItemMaxSize">{0, 0}</string>
-								<bool key="NSToolbarItemEnabled">YES</bool>
-								<bool key="NSToolbarItemAutovalidates">YES</bool>
-								<int key="NSToolbarItemTag">-1</int>
-								<bool key="NSToolbarIsUserRemovable">YES</bool>
-								<int key="NSToolbarItemVisibilityPriority">0</int>
-							</object>
-							<object class="NSToolbarItem" id="300410941">
-								<object class="NSMutableString" key="NSToolbarItemIdentifier">
-									<characters key="NS.bytes">D104460A-091E-4E6B-968D-E93C0B5CAF4A</characters>
-								</object>
-								<string key="NSToolbarItemLabel">Write Changes</string>
-								<string key="NSToolbarItemPaletteLabel">Write Changes</string>
-								<string key="NSToolbarItemToolTip"/>
-								<nil key="NSToolbarItemView"/>
-								<object class="NSCustomResource" key="NSToolbarItemImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">NSActionTemplate</string>
 								</object>
 								<nil key="NSToolbarItemTarget"/>
 								<nil key="NSToolbarItemAction"/>
@@ -1310,9 +1287,8 @@ AAAAAAAAAAAAAA</bytes>
 						<reference ref="286525564"/>
 						<reference ref="778945444"/>
 						<reference ref="493877672"/>
-						<reference ref="474878792"/>
 						<reference ref="313770764"/>
-						<reference ref="300410941"/>
+						<reference ref="474878792"/>
 						<reference ref="696521058"/>
 					</object>
 					<object class="NSMutableArray" key="NSToolbarIBDefaultItems">
@@ -1320,13 +1296,12 @@ AAAAAAAAAAAAAA</bytes>
 						<reference ref="778945444"/>
 						<reference ref="493877672"/>
 						<reference ref="884851114"/>
-						<reference ref="300410941"/>
-						<reference ref="884851114"/>
 						<reference ref="313770764"/>
-						<reference ref="241057972"/>
+						<reference ref="884851114"/>
 						<reference ref="474878792"/>
 						<reference ref="696521058"/>
 						<reference ref="18127408"/>
+						<reference ref="286525564"/>
 						<reference ref="1060619802"/>
 					</object>
 					<object class="NSMutableArray" key="NSToolbarIBSelectableItems">
@@ -1354,7 +1329,7 @@ AAAAAAAAAAAAAA</bytes>
 											<int key="NSvFlags">274</int>
 											<object class="NSMutableArray" key="NSSubviews">
 												<bool key="EncodedWithXMLCoder">YES</bool>
-												<object class="IKImageView" id="385012992">
+												<object class="IKImageView" id="23109399">
 													<reference key="NSNextResponder" ref="734287561"/>
 													<int key="NSvFlags">274</int>
 													<object class="NSMutableSet" key="NSDragTypes">
@@ -1370,7 +1345,7 @@ AAAAAAAAAAAAAA</bytes>
 													<object class="CISourceOverCompositing" key="NSViewCompositeFilter">
 														<bool key="CIEnabled">YES</bool>
 													</object>
-													<float key="zoomFactor">1.171875e-01</float>
+													<float key="zoomFactor">2.043750e-01</float>
 													<float key="rotationAngle">0.000000e+00</float>
 													<string key="currentToolMode">IKToolModeNone</string>
 													<bool key="autoresizes">YES</bool>
@@ -1598,7 +1573,7 @@ AAAAAAAAAAAAAA</bytes>
 																</object>
 															</object>
 															<double key="NSRowHeight">1.700000e+01</double>
-															<int key="NSTvFlags">-759169024</int>
+															<int key="NSTvFlags">-624951296</int>
 															<int key="NSColumnAutoresizingStyle">2</int>
 															<int key="NSDraggingSourceMaskForLocal">15</int>
 															<int key="NSDraggingSourceMaskForNonLocal">0</int>
@@ -1850,6 +1825,9 @@ AAAAAAAAAAAAAA</bytes>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
 				<string key="NSMaxSize">{3.40282e+38, 3.40282e+38}</string>
+			</object>
+			<object class="NSCustomObject" id="828725129">
+				<string key="NSClassName">OutlineViewDS</string>
 			</object>
 		</object>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -2137,22 +2115,6 @@ AAAAAAAAAAAAAA</bytes>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
-						<string key="label">outlineView</string>
-						<reference key="source" ref="662338854"/>
-						<reference key="destination" ref="809288042"/>
-					</object>
-					<int key="connectionID">468</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBActionConnection" key="connection">
-						<string key="label">runToolbarCustomizationPalette:</string>
-						<reference key="source" ref="1014"/>
-						<reference key="destination" ref="1060619802"/>
-					</object>
-					<int key="connectionID">522</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
 						<string key="label">exifLabel</string>
 						<reference key="source" ref="662338854"/>
 						<reference key="destination" ref="791541370"/>
@@ -2203,9 +2165,65 @@ AAAAAAAAAAAAAA</bytes>
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">imageView</string>
 						<reference key="source" ref="662338854"/>
-						<reference key="destination" ref="385012992"/>
+						<reference key="destination" ref="23109399"/>
 					</object>
 					<int key="connectionID">533</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">dataSource</string>
+						<reference key="source" ref="809288042"/>
+						<reference key="destination" ref="828725129"/>
+					</object>
+					<int key="connectionID">537</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="809288042"/>
+						<reference key="destination" ref="828725129"/>
+					</object>
+					<int key="connectionID">538</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">dataSource</string>
+						<reference key="source" ref="662338854"/>
+						<reference key="destination" ref="828725129"/>
+					</object>
+					<int key="connectionID">540</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">outlineView</string>
+						<reference key="source" ref="662338854"/>
+						<reference key="destination" ref="809288042"/>
+					</object>
+					<int key="connectionID">541</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">removeSelected:</string>
+						<reference key="source" ref="662338854"/>
+						<reference key="destination" ref="493877672"/>
+					</object>
+					<int key="connectionID">544</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">autogroupItems:</string>
+						<reference key="source" ref="662338854"/>
+						<reference key="destination" ref="313770764"/>
+					</object>
+					<int key="connectionID">545</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">runToolbarCustomizationPalette:</string>
+						<reference key="source" ref="1014"/>
+						<reference key="destination" ref="1060619802"/>
+					</object>
+					<int key="connectionID">547</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -2958,7 +2976,6 @@ AAAAAAAAAAAAAA</bytes>
 							<reference ref="493877672"/>
 							<reference ref="474878792"/>
 							<reference ref="313770764"/>
-							<reference ref="300410941"/>
 							<reference ref="696521058"/>
 						</object>
 						<reference key="parent" ref="972006081"/>
@@ -3024,11 +3041,6 @@ AAAAAAAAAAAAAA</bytes>
 						<reference key="parent" ref="205582395"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">507</int>
-						<reference key="object" ref="300410941"/>
-						<reference key="parent" ref="205582395"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">508</int>
 						<reference key="object" ref="696521058"/>
 						<reference key="parent" ref="205582395"/>
@@ -3038,7 +3050,7 @@ AAAAAAAAAAAAAA</bytes>
 						<reference key="object" ref="734287561"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="385012992"/>
+							<reference ref="23109399"/>
 						</object>
 						<reference key="parent" ref="228040771"/>
 					</object>
@@ -3093,8 +3105,13 @@ AAAAAAAAAAAAAA</bytes>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">532</int>
-						<reference key="object" ref="385012992"/>
+						<reference key="object" ref="23109399"/>
 						<reference key="parent" ref="734287561"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">536</int>
+						<reference key="object" ref="828725129"/>
+						<reference key="parent" ref="1049"/>
 					</object>
 				</object>
 			</object>
@@ -3281,7 +3298,6 @@ AAAAAAAAAAAAAA</bytes>
 					<string>500.IBPluginDependency</string>
 					<string>501.IBPluginDependency</string>
 					<string>502.IBPluginDependency</string>
-					<string>507.IBPluginDependency</string>
 					<string>508.IBPluginDependency</string>
 					<string>510.IBPluginDependency</string>
 					<string>513.IBEditorWindowLastContentRect</string>
@@ -3295,6 +3311,7 @@ AAAAAAAAAAAAAA</bytes>
 					<string>520.IBPluginDependency</string>
 					<string>523.IBPluginDependency</string>
 					<string>532.IBPluginDependency</string>
+					<string>536.IBPluginDependency</string>
 					<string>56.IBPluginDependency</string>
 					<string>56.ImportedFromIB2</string>
 					<string>57.IBEditorWindowLastContentRect</string>
@@ -3465,11 +3482,11 @@ AAAAAAAAAAAAAA</bytes>
 					<reference ref="9"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<reference ref="9"/>
-					<string>{{87, 174}, {640, 508}}</string>
+					<string>{{228, 179}, {640, 508}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<reference ref="8"/>
 					<reference ref="8"/>
-					<string>{{87, 174}, {640, 508}}</string>
+					<string>{{228, 179}, {640, 508}}</string>
 					<reference ref="9"/>
 					<string>{{238, 285}, {480, 360}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3487,7 +3504,7 @@ AAAAAAAAAAAAAA</bytes>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{41, 497}, {616, 0}}</string>
+					<string>{{240, 687}, {616, 0}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3505,10 +3522,9 @@ AAAAAAAAAAAAAA</bytes>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>{{803, 194}, {276, 378}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{324, 218}, {276, 378}}</string>
-					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{324, 218}, {276, 378}}</string>
+					<string>{{803, 194}, {276, 378}}</string>
 					<reference ref="9"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3517,6 +3533,7 @@ AAAAAAAAAAAAAA</bytes>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.imagekit.ibplugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<reference ref="9"/>
 					<string>{{171, 534}, {186, 183}}</string>
@@ -3565,7 +3582,7 @@ AAAAAAAAAAAAAA</bytes>
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">533</int>
+			<int key="maxID">547</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -3599,6 +3616,14 @@ AAAAAAAAAAAAAA</bytes>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
+					<string key="className">OutlineViewDS</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">OutlineViewDS.py</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
 					<string key="className">PyviewAppDelegate</string>
 					<string key="superclassName">NSObject</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -3613,11 +3638,15 @@ AAAAAAAAAAAAAA</bytes>
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSMutableArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>autogroupItems:</string>
 							<string>menuOpen:</string>
+							<string>removeSelected:</string>
 							<string>toggleExifPanel:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 						</object>
@@ -3626,6 +3655,7 @@ AAAAAAAAAAAAAA</bytes>
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSMutableArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>dataSource</string>
 							<string>exifLabel</string>
 							<string>exifPanel</string>
 							<string>imageView</string>
@@ -3633,6 +3663,7 @@ AAAAAAAAAAAAAA</bytes>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
